--- a/sonoff-basic.yaml
+++ b/sonoff-basic.yaml
@@ -7,6 +7,17 @@ esphome:
   name_add_mac_suffix: true
   platform: ESP8266
   board: sonoff_basic
+  
+  # This will allow for (future) project identification,
+  # configuration and updates.
+  project:
+    name: zsebastjan.sonoff_basic
+    version: "1.0"
+
+# This should point to the public location of this yaml file.
+dashboard_import:
+  package_import_url: github://zsebastjan/esphome-configurations/blob/main/sonoff-basic.yaml@v1
+
 
 # Enable logging
 logger:
