--- a/sonoff-basic.yaml
+++ b/sonoff-basic.yaml
@@ -1,6 +1,11 @@
 substitutions:
   devicename: sonoff
   friendly_devicename: "Sonoff Basic"
+  ap_password: !secret ap_password
+  wifi_SSID: !secret wifi_SSID
+  wifi_password: !secret wifi_password
+  esphome_password: !secret esphome_password
+
 
 esphome:
   name: $devicename
@@ -26,16 +31,16 @@ logger:
 api:
 
 ota:
-  password: !secret esphome_password
+  password: $esphome_password
 
 wifi:
-  ssid: !secret wifi_SSID
-  password: !secret wifi_password
+  ssid: $wifi_SSID
+  password: $wifi_password
 
   # Enable fallback hotspot (captive portal) in case wifi connection fails
   ap:
     ssid: $devicename
-    password: !secret ap_password
+    password: $ap_password
 
 captive_portal:
 
@@ -47,7 +52,7 @@ binary_sensor:
         input: true
         pullup: true
       inverted: true
-    name: ${friendly_devicename} Button"
+    name: ${friendly_devicename} Button
     on_press:
       - switch.toggle: relay
 
