--- a/sonoff-basic.yaml
+++ b/sonoff-basic.yaml
@@ -1,10 +1,10 @@
 substitutions:
   devicename: sonoff
   friendly_devicename: "Sonoff Basic"
-  ap_password: "!secret ap_password"
-  wifi_SSID: "!secret wifi_SSID"
-  wifi_password: "!secret wifi_password"
-  esphome_password: "!secret esphome_password"
+  ap_password: !secret ap_password
+  wifi_SSID: !secret wifi_SSID
+  wifi_password: !secret wifi_password
+  esphome_password: !secret esphome_password
 
 
 esphome:
