--- a/sonoff-basic.yaml
+++ b/sonoff-basic.yaml
@@ -5,7 +5,7 @@ substitutions:
   wifi_SSID: !secret wifi_SSID
   wifi_password: !secret wifi_password
   esphome_password: !secret esphome_password
-
+  use_address: sonoff-e4b5c6.local
 
 esphome:
   name: $devicename
@@ -34,6 +34,7 @@ ota:
   password: $esphome_password
 
 wifi:
+  use_address: $use_address
   ssid: $wifi_SSID
   password: $wifi_password
 
