--- a/sonoff-basic.yaml
+++ b/sonoff-basic.yaml
@@ -2,10 +2,10 @@ substitutions:
   devicename: sonoff
   friendly_devicename: "Sonoff Basic"
 #  ap_password: !secret ap_password
-  wifi_SSID: !secret wifi_SSID
-  wifi_password: !secret wifi_password
+#  wifi_SSID: !secret wifi_SSID
+#  wifi_password: !secret wifi_password
   esphome_password: !secret esphome_password
-  use_address: sonoff-e4b5c6.local
+#  use_address: sonoff-e4b5c6.local
 
 esphome:
   name: $devicename
