--- a/d1mini.yaml
+++ b/d1mini.yaml
@@ -1,8 +1,16 @@
+# These substitutions allow the end user to override certain values
+substitutions:
+  name: "d1mini"
+  
 esp8266:
   board: d1_mini
 
 esphome:
-  name: d1mini
+  name: "${name}"
+  # Automatically add the mac address to the name
+  # so you can use a single firmware for all devices
+  name_add_mac_suffix: true
+  
   # This will allow for (future) project identification,
   # configuration and updates.
   project:
@@ -20,12 +28,8 @@ logger:
 api:
 
 ota:
-  password: "5507a031bd7c37e0d33a8d7aa0eb9dda"
 
 wifi:
-  ssid: !secret wifi_ssid
-  password: !secret wifi_password
-
   # Enable fallback hotspot (captive portal) in case wifi connection fails
   ap:
     ssid: "D1Mini Fallback Hotspot"
