--- a/d1mini.yaml
+++ b/d1mini.yaml
@@ -1,6 +1,7 @@
 # These substitutions allow the end user to override certain values
 substitutions:
   name: "d1mini"
+  test: "test"
   
 esp8266:
   board: d1_mini
