--- a/sonoff-basic.yaml
+++ b/sonoff-basic.yaml
@@ -1,14 +1,8 @@
 substitutions:
-  devicename: sonoff
-  friendly_devicename: "Sonoff Basic"
-#  ap_password: !secret ap_password
-#  wifi_SSID: !secret wifi_SSID
-#  wifi_password: !secret wifi_password
-  esphome_password: !secret esphome_password
-#  use_address: sonoff-e4b5c6.local
+  name: sonoff
 
 esphome:
-  name: $devicename
+  name: $name
   name_add_mac_suffix: true
   platform: ESP8266
   board: sonoff_basic
@@ -21,7 +15,7 @@ esphome:
 
 # This should point to the public location of this yaml file.
 dashboard_import:
-  package_import_url: github://zsebastjan/esphome-configurations/sonoff-basic.yaml
+  package_import_url: github://zsebastjan/esphome-configurations/sonoff-basic.yaml@v1.2
 
 
 # Enable logging
@@ -31,17 +25,12 @@ logger:
 api:
 
 ota:
-  password: $esphome_password
 
 wifi:
-  use_address: $use_address
-  ssid: $wifi_SSID
-  password: $wifi_password
-
   # Enable fallback hotspot (captive portal) in case wifi connection fails
   ap:
-    ssid: $devicename
-    password: $ap_password
+    ssid: $name
+    password: "12345678"
 
 captive_portal:
 
@@ -53,13 +42,13 @@ binary_sensor:
         input: true
         pullup: true
       inverted: true
-    name: ${friendly_devicename} Button
+    name: ${name} Button
     on_press:
       - switch.toggle: relay
 
 switch:
   - platform: gpio
-    name: ${friendly_devicename} Relay
+    name: ${name} Relay
     pin: GPIO12
     id: relay
 
