--- a/sonoff-basic.yaml
+++ b/sonoff-basic.yaml
@@ -1,17 +1,21 @@
+# These substitutions allow the end user to override certain values
 substitutions:
   name: sonoff
+  
+esp8266:
+  board: sonoff_basic
 
 esphome:
   name: $name
+  # Automatically add the mac address to the name
+  # so you can use a single firmware for all devices
   name_add_mac_suffix: true
-  platform: ESP8266
-  board: sonoff_basic
   
   # This will allow for (future) project identification,
   # configuration and updates.
   project:
     name: zsebastjan.sonoff_basic
-    version: "1.0"
+    version: "1.2"
 
 # This should point to the public location of this yaml file.
 dashboard_import:
