--- a/blitzwolf-shp10.yaml
+++ b/blitzwolf-shp10.yaml
@@ -51,11 +51,20 @@ sensor:
       name: "${friendly_name} Current"
     power:
       name: "${friendly_name} Power"
+      id: socket_power
     energy:
       name: "${friendly_name} Energy"
     internal_temperature:
       name: "${friendly_name} Internal temperature"
-    update_interval: 30s
+    update_interval: 10s
+  - platform: total_daily_energy
+    name: "${friendly_name} Total Daily Energy"
+    power_id: socket_power
+    filters:
+        # Multiplication factor from W to kW is 0.001
+        - multiply: 0.001
+    unit_of_measurement: kWh
+    icon: mdi:calendar-today
     
 binary_sensor:
   - platform: gpio
