--- a/blitzwolf-shp10.yaml
+++ b/blitzwolf-shp10.yaml
@@ -34,6 +34,10 @@ api:
 
 ota:
 
+time:
+  - platform: homeassistant
+    id: homeassistant_time
+
 # Example configuration entry
 uart:
   id: uart_bus
