--- a/blitzwolf-shp2.yaml
+++ b/blitzwolf-shp2.yaml
@@ -1,5 +1,5 @@
 substitutions:
-  name: socket-c84865
+  name: bw-shp2
   friendly_name: "BlitzWolf SHP2"
   # Higher value gives lower watt readout
   current_res: "0.0023"
@@ -19,11 +19,11 @@ esphome:
   # configuration and updates.
   project:
     name: zsebastjan.blitzwolf-shp2
-    version: "1.3"
+    version: "1.9"
 
 # This should point to the public location of this yaml file.
 dashboard_import:
-  package_import_url: github://zsebastjan/esphome-configurations/blitzwolf-shp2.yaml@v1.3
+  package_import_url: github://zsebastjan/esphome-configurations/blitzwolf-shp2.yaml@v1.9
 
 wifi:
   # Enable fallback hotspot (captive portal) in case wifi connection fails
