copy from athom config

--- a/blitzwolf-shp2.yaml
+++ b/blitzwolf-shp2.yaml
@@ -1,72 +1,190 @@
 substitutions:
   name: bw-shp2
   friendly_name: "BlitzWolf SHP2"
+  device_description: "BlitzWolf SHP2 smart plug"
+  project_name: "zsebastjan.Blitzwolf-SHP2"
+  project_version: "v2.0"
+  sensor_update_interval: "10s"
+  relay_restore_mode: RESTORE_DEFAULT_ON
+  # Current Limit in Amps. AU Plug = 10. IL, BR, EU, UK, US Plug = 16.
+  current_limit : "16"
+  # Define a domain for this device to use. i.e. iot.home.lan (so device will appear as athom-smart-plug-v2.iot.home.lan in DNS/DHCP logs)
+  dns_domain: ".local"
+  # Set timezone of the smart plug. Useful if the plug is in a location different to the HA server. Can be entered in unix Country/Area format (i.e. "Australia/Sydney")
+  timezone: ""
+  # Set the duration between the sntp service polling ntp.org servers for an update
+  sntp_update_interval: "6h"
+  # Network time servers for your region, enter from lowest to highest priority. To use local servers update as per zones or countries at: https://www.ntppool.org/zone/@
+  sntp_server_1: "0.pool.ntp.org"
+  sntp_server_2: "1.pool.ntp.org"
+  sntp_server_3: "2.pool.ntp.org"
+  # Enables faster network connections, with last connected SSID being connected to and no full scan for SSID being undertaken
+  wifi_fast_connect: "false"
+  # Define logging level: NONE, ERROR, WARN, INFO, DEBUG (Default), VERBOSE, VERY_VERBOSE
+  log_level: "INFO"
+  # Enable or disable the use of IPv6 networking on the device
+  ipv6_enable: "false"
+  # Hide the ENERGY sensor that shows kWh consumed, but with no time period associated with it. Resets when device restarted and reflashed.
+  hide_energy_sensor: "false"
   # Higher value gives lower watt readout
   current_res: "0.0023"
   # Lower value gives lower voltage readout
   voltage_div: "935"
 
+esphome:
+  name: "${name}"
+  friendly_name: "${friendly_name}"
+  comment: "${device_description}"
+  # Automatically add the mac address to the name so you can use a single firmware for all devices
+  name_add_mac_suffix: true
+  min_version: 2024.6.0
+  # This will allow for (future) project identification, configuration and updates.
+  project:
+    name: "${project_name}"
+    version: "${project_version}"
+  on_boot:
+    - priority: 600
+      then:
+        - select.set_index:
+            id: power_mode
+            index: !lambda |-
+                    return id(restore_mode)-1;
+        - lambda: |-
+              switch(id(restore_mode))
+              {
+              case 1:{
+                      id(relay).turn_off();
+                      break;
+                            }
+              case 2:{
+                      id(relay).turn_on();
+                      break;
+                            }
+              default:{
+                      break;
+                            }
+              }
+
 esp8266:
   board: esp8285
+  restore_from_flash: true
+
+preferences:
+  flash_write_interval: 5min
   
-esphome:
-  name: $name
-  # Automatically add the mac address to the name
-  # so you can use a single firmware for all devices
-  name_add_mac_suffix: true
-  
-  # This will allow for (future) project identification,
-  # configuration and updates.
-  project:
-    name: zsebastjan.blitzwolf-shp2
-    version: "1.9"
-
-# This should point to the public location of this yaml file.
-dashboard_import:
-  package_import_url: github://zsebastjan/esphome-configurations/blitzwolf-shp2.yaml@v1.9
-
-wifi:
-  # Enable fallback hotspot (captive portal) in case wifi connection fails
-  ap:
-    ssid: $name
-    password: "12345678"
-
-# Enable logging
-logger:
-
 # Enable Home Assistant API
 api:
 
 ota:
-  
-time:
-  - platform: homeassistant
-    id: homeassistant_time
-    
+  - platform: esphome
+
+# Enable logging
+logger:
+  level: ${log_level}
+  baud_rate: 0
+
+mdns:
+  disabled: false
+
+web_server:
+  port: 80
+
+network:
+  enable_ipv6: ${ipv6_enable}
+
+wifi:
+  # Enable fallback hotspot (captive portal) in case wifi connection fails
+  # This spawns an AP with the device name and mac address with no password.
+  ap: {}
+  # Allow rapid re-connection to previously connect WiFi SSID, skipping scan of all SSID
+  fast_connect: "${wifi_fast_connect}"
+  # Define dns domain / suffix to add to hostname
+  domain: "${dns_domain}"
+
+captive_portal:
+
+# This should point to the public location of this yaml file.
+dashboard_import:
+  package_import_url: github://zsebastjan/esphome-configurations/blitzwolf-shp2.yaml
+
+uart:
+  rx_pin: RX
+  baud_rate: 4800
+  parity: EVEN
+
+globals:
+  - id: total_energy
+    type: float
+    restore_value: yes
+    initial_value: '0.0'
+  - id: restore_mode
+    type: int
+    restore_value: yes
+    initial_value: "2"      # 0 = Always_Off. 1 = Restore_Power_Off. 2 = Always_On.
+
+select:
+  - platform: template
+    name: "Power On State"
+    id: "power_mode"
+    optimistic: true
+    icon: mdi:electric-switch
+    options:
+      - Always Off
+      - Always On
+      - Restore Power Off State
+    on_value:
+      then:
+        - lambda: |-
+            id(restore_mode)=i+1;
+
 binary_sensor:
+  - platform: status
+    name: "Status"
+    entity_category: diagnostic     
+
   - platform: gpio
     pin:
       number: GPIO3
-      inverted: True
-    name: "${friendly_name} Button"
-    
-switch:
-- platform: gpio
-  name: "${friendly_name} Relay"
-  pin: GPIO14
-  restore_mode: ALWAYS_ON
-- platform: gpio
-  name: "${friendly_name} LED Blue"
-  pin: GPIO1
-  inverted: True
-  restore_mode: ALWAYS_OFF
-- platform: gpio
-  name: "${friendly_name} LED Red"
-  pin: GPIO13
-  inverted: True
-  restore_mode: ALWAYS_OFF
+      mode: INPUT_PULLUP
+      inverted: true
+    id: power_button
+    name: "Power Button"
+    disabled_by_default: true
+    on_multi_click:
+      - timing:
+        - ON for at most 1s
+        - OFF for at least 0.2s
+        then:
+          - switch.toggle: relay
+      - timing:
+        - ON for at least 4s
+        then:
+          - button.press: Reset
 
 sensor:
+  - platform: uptime
+    name: "Uptime Sensor"
+    id: uptime_sensor
+    entity_category: diagnostic
+    internal: true
+
+    # Reports the WiFi signal strength/RSSI in dB
+  - platform: wifi_signal
+    name: "WiFi Signal dB"
+    id: wifi_signal_db
+    update_interval: 60s
+    entity_category: diagnostic
+
+    # Reports the WiFi signal strength in %
+  - platform: copy
+    source_id: wifi_signal_db
+    name: "WiFi Signal Percent"
+    filters:
+      - lambda: return min(max(2 * (x + 100.0), 0.0), 100.0);
+    unit_of_measurement: "%"
+    entity_category: diagnostic
+    device_class: ""
+
   - platform: hlw8012
     sel_pin:
       number: GPIO12
@@ -75,29 +193,175 @@ sensor:
     cf1_pin: GPIO05
     current_resistor: ${current_res}
     voltage_divider: ${voltage_div}
+
     current:
-      name: "${friendly_name} Current"
-      unit_of_measurement: A
-      icon: mdi:power-socket
+      name: "Current"
+      filters:
+        - throttle_average: ${sensor_update_interval}
+    
     voltage:
-      name: "${friendly_name} Voltage"
-      unit_of_measurement: V
+      name: "Voltage"
+      filters:
+        - throttle_average: ${sensor_update_interval}
+    
     power:
-      name: "${friendly_name} Power"
-      unit_of_measurement: W
-      id: socket_power
-      icon: mdi:power-plug
-    change_mode_every: 8
-    update_interval: 10s
-  - platform: total_daily_energy
-    name: "${friendly_name} Total Daily Energy"
-    power_id: socket_power
-    filters:
+      name: "Power"
+      id: power_sensor
+      filters:
+        - throttle_average: ${sensor_update_interval}
+
+    energy:
+      name: "Energy"
+      id: energy
+      unit_of_measurement: kWh
+      internal: ${hide_energy_sensor}
+      filters:
+        - throttle: ${sensor_update_interval}
         # Multiplication factor from W to kW is 0.001
         - multiply: 0.001
+      on_value:
+        then:
+          - lambda: |-
+              static float previous_energy_value = 0.0;
+              float current_energy_value = id(energy).state;
+              id(total_energy) += current_energy_value - previous_energy_value;
+              previous_energy_value = current_energy_value;
+              id(total_energy_sensor).update();
+
+  - platform: template
+    name: "Total Energy"
+    id: total_energy_sensor
     unit_of_measurement: kWh
-    icon: mdi:calendar-today
+    device_class: "energy"
+    state_class: "total_increasing"
+    icon: "mdi:lightning-bolt"
+    accuracy_decimals: 3
+    lambda: |-
+      return id(total_energy);
+    update_interval: ${sensor_update_interval}
+
+  - platform: total_daily_energy
+    name: "Total Energy Since Boot"
+    restore: true
+    power_id: power_sensor
+    unit_of_measurement: kWh
+    icon: mdi:hours-24
+    accuracy_decimals: 3
+    filters:
+      - multiply: 0.001
+
+button:
+  - platform: restart
+    name: "Restart"
+    entity_category: config
+
+  - platform: factory_reset
+    name: "Factory Reset"
+    id: Reset
+    entity_category: config
+
+  - platform: safe_mode
+    name: "Safe Mode"
+    internal: false
+    entity_category: config
+
+    
+switch:
+- platform: gpio
+  name: "Switch"
+  pin: GPIO14
+  id: relay
+  restore_mode: ${relay_restore_mode}
+  icon: mdi:${power_plug_type}
+  on_turn_on:
+      - while:
+          condition:
+            switch.is_on: relay
+          then:
+            - light.turn_on: HI
+
+light:
+  - platform: status_led
+    name: "Status LED"
+    id: blue_led
+    disabled_by_default: true
+    pin:
+      inverted: true
+      number: GPIO1
+
+  - platform: gpio
+    name: "Red LED"
+    id: red_led
+    disabled_by_default: true
+    pin:
+      inverted: true
+      number: GPIO13
+
+text_sensor:
+  - platform: wifi_info
+    ip_address:
+      name: "IP Address"
+      entity_category: diagnostic
+    ssid:
+      name: "Connected SSID"
+      entity_category: diagnostic
+    mac_address:
+      name: "Mac Address"
+      entity_category: diagnostic
       
-# Extra sensor to keep track of plug uptime
-  - platform: uptime
-    name: ${name}_Uptime Sensor
+    #  Creates a sensor showing when the device was last restarted
+  - platform: template
+    name: 'Last Restart'
+    id: device_last_restart
+    icon: mdi:clock
+    entity_category: diagnostic
+#    device_class: timestamp
+
+  #  Creates a sensor of the uptime of the device, in formatted days, hours, minutes and seconds
+  - platform: template
+    name: "Uptime"
+    entity_category: diagnostic
+    lambda: |-
+      int seconds = (id(uptime_sensor).state);
+      int days = seconds / (24 * 3600);
+      seconds = seconds % (24 * 3600);
+      int hours = seconds / 3600;
+      seconds = seconds % 3600;
+      int minutes = seconds /  60;
+      seconds = seconds % 60;
+      if ( days > 3650 ) {
+        return { "Starting up" };
+      } else if ( days ) {
+        return { (String(days) +"d " + String(hours) +"h " + String(minutes) +"m "+ String(seconds) +"s").c_str() };
+      } else if ( hours ) {
+        return { (String(hours) +"h " + String(minutes) +"m "+ String(seconds) +"s").c_str() };
+      } else if ( minutes ) {
+        return { (String(minutes) +"m "+ String(seconds) +"s").c_str() };
+      } else {
+        return { (String(seconds) +"s").c_str() };
+      }
+    icon: mdi:clock-start
+
+time:
+  - platform: sntp
+    id: sntp_time
+  # Define the timezone of the device
+    timezone: "${timezone}"
+  # Change sync interval from default 5min to 6 hours (or as set in substitutions)
+    update_interval: ${sntp_update_interval}
+  # Set specific sntp servers to use
+    servers: 
+      - "${sntp_server_1}"
+      - "${sntp_server_2}"
+      - "${sntp_server_3}"    
+  # Publish the time the device was last restarted
+    on_time_sync:
+      then:
+        # Update last restart time, but only once.
+        - if:
+            condition:
+              lambda: 'return id(device_last_restart).state == "";'
+            then:
+              - text_sensor.template.publish:
+                  id: device_last_restart
+                  state: !lambda 'return id(sntp_time).now().strftime("%a %d %b %Y - %I:%M:%S %p");'
