--- a/blitzwolf-shp2.yaml
+++ b/blitzwolf-shp2.yaml
@@ -26,6 +26,9 @@ substitutions:
   ipv6_enable: "false"
   # Hide the ENERGY sensor that shows kWh consumed, but with no time period associated with it. Resets when device restarted and reflashed.
   hide_energy_sensor: "false"
+  # Power plug icon selection. Change to reflect the type/country of powr plug in use, this will update the power plug icon shown next to the switch
+  power_plug_type: "power-socket-eu"  # Options: power-socket-au | power-socket-ch | power-socket-de | power-socket-eu | power-socket-fr | power-socket-it | power-socket-jp | power-socket-uk | power-socket-us |
+
   # Higher value gives lower watt readout
   current_res: "0.0023"
   # Lower value gives lower voltage readout
@@ -54,10 +57,12 @@ esphome:
               {
               case 1:{
                       id(relay).turn_off();
+                      id(pwr_led).turn_off();
                       break;
                             }
               case 2:{
                       id(relay).turn_on();
+                      id(pwr_led).turn_on();
                       break;
                             }
               default:{
@@ -107,10 +112,10 @@ captive_portal:
 dashboard_import:
   package_import_url: github://zsebastjan/esphome-configurations/blitzwolf-shp2.yaml
 
-uart:
-  rx_pin: RX
-  baud_rate: 4800
-  parity: EVEN
+# uart:
+#   rx_pin: RX
+#   baud_rate: 4800
+#   parity: EVEN
 
 globals:
   - id: total_energy
@@ -120,7 +125,7 @@ globals:
   - id: restore_mode
     type: int
     restore_value: yes
-    initial_value: "2"      # 0 = Always_Off. 1 = Restore_Power_Off. 2 = Always_On.
+    initial_value: "2"      # 0 = Always_Off. 1 = Always_On. 2 = Restore_Power_Off.
 
 select:
   - platform: template
@@ -227,6 +232,8 @@ sensor:
               id(total_energy) += current_energy_value - previous_energy_value;
               previous_energy_value = current_energy_value;
               id(total_energy_sensor).update();
+    change_mode_every: 8
+    update_interval: ${sensor_update_interval}
 
   - platform: template
     name: "Total Energy"
@@ -274,11 +281,9 @@ switch:
   restore_mode: ${relay_restore_mode}
   icon: mdi:${power_plug_type}
   on_turn_on:
-      - while:
-          condition:
-            switch.is_on: relay
-          then:
             - light.turn_on: pwr_led
+  on_turn_off:
+  - light.turn_off: pwr_led
 
 output:
   - platform: gpio
